# reference-resolver-agent

./: README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
podcast-app/: .env.example  .gitignore  docker-compose.yml  start.sh
podcast-app/backend/: config.py  database.py  main.py  podcast_generator.py  requirements.txt  rss_parser.py  scheduler.py
podcast-app/backend/fetchers/: academic_fetcher.py  news_fetcher.py
podcast-app/frontend/: app.js  index.html  standalone.html  style.css
references/: field_mapping.md
scripts/: reference_resolver.py
