[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "reference-resolver-agent"
version = "0.1.0"
description = "Convert plain-text citations into EndNote-ready RIS, ENW, or BibTeX files."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["citations", "references", "endnote", "ris", "bibtex", "bibliography"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
reference-resolver = "scripts.reference_resolver:main"

[tool.setuptools.packages.find]
include = ["scripts*"]
